--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -8,7 +8,7 @@
       "./scripts/customizer.js"
     ]
   },
-  "publicPath": "/app/themes/sage",
+  "publicPath": "/app/themes/sportradar_v2",
   "devUrl": "http://localhost/wordpress",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
